# coding-assistant

./: LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  styles.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  main.rs  open_ai_funcs.rs  structs.rs  system-message.txt
src/components/: ChatWindow.tsx  CodeBlockComponent.tsx  CopyCodeButton.tsx  CustomTextArea.tsx  Loading.tsx  MaterialIcon.tsx  loading.css
src/helpers/: messageStreaming.ts
src/hooks/: useScrollToBottom.tsx
