[package]
name = "coding-assistant"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "shell-open", "fs-all", "clipboard-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comrak = "0.20.0"
async-openai = "0.17.1"
futures = "0.3.29"
chrono = "0.4"
dirs = "5.0.1"
async-stream = "0.3.5"
tokio = { version = "1.35.0", features = [] }
pin-utils = "0.1.0"
uuid =  { version = "1.6.1", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
